<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_nav_add"
        android:title="@string/nav_add" />

    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/ic_nav_tasks"
        android:title="@string/nav_tasks" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_nav_calendar"
        android:title="@string/nav_calendar" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />

</menu>
